# rvkg-api

./: Cargo.toml  README.md  Shuttle.toml
src/: main.rs
static/: api-creating.html  api-docs.html  api-tutorial.html  index.html
