[package]
name = "rvkg-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.3.1"
derive_more = { version = "1.0.0", features = ["full"] }
rand = "0.8.5"
serde = "1.0.215"
serde_json = "1.0.133"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
thiserror = "2.0.6"
tokio = "1.26.0"
